<resources>
    <string name="app_name">EasyFin</string>
    <string name="title_home">Home</string>
    <string name="title_stocks">Stocks</string>
    <string name="title_bills">Bills</string>
    <string name="title_activity_add_stock_favorite">Add Favorite</string>
    <string name="title_activity_stocks">Stocks</string>
    <string name="title_activity_bills">Bills</string>
    <string name="backBttn">Back</string>
    <string name="title_stock_id">ID(s) use ";" (max 5)</string>
    <string name="title_stock_name">Stock Name</string>
    <string name="submitBttn">Submit</string>
    <string name="title_activity_base">Base</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="stock_search_editText">ID(s) use "," (max 5)</string>
    <string name="search_button">Search</string>
    <string name="spinner_button_text">Search</string>
    <string name="refreshBttn">Refresh Favorites</string>
    <string name="bills_label_text">Bills</string>
    <string name="refresh_bills_button">Refresh</string>
    <string name="delete_bill_button">DELETE BILL</string>
    <string name="bill_add_name_text">Bill Name</string>
    <string name="bill_add_date_text">Bill Date (mm/dd/yyyy)</string>
    <string name="bill_add_amount_text">amount (i.e. 7.56)</string>
    <string name="bills_name_label_text">NAME</string>
    <string name="bills_date_label_text">DATE</string>
    <string name="bills_label_amount_text">AMOUNT</string>
    <string name="channel_name">EasyFinNotify</string>
    <string name="channel_description">notifies user of bills</string>
    <string name="monthly_earnings">monthly earnings</string>
    <string name="switch_textView">Pie Chart/Line Graph</string>
</resources>
