<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.easyfin.travis.easyfin.add_stock_favorite"
    android:orientation="vertical">

    <EditText
        android:id="@+id/stock_name"
        android:layout_width="match_parent"
        android:layout_height="20dp"
        android:layout_weight="1"
        android:ems="10"
        android:inputType="text"
        android:hint="@string/title_stock_name" />

    <EditText
        android:id="@+id/stock_id"
        android:layout_width="match_parent"
        android:layout_height="20dp"
        android:layout_weight="1"
        android:ems="10"
        android:inputType="text"
        android:hint="@string/title_stock_id" />
    <Button
        android:id="@+id/backBttn"
        android:text="@string/backBttn"
        android:layout_width="match_parent"
        android:layout_height="20dp"
        android:layout_weight="1"/>
    <Button
        android:layout_width="match_parent"
        android:layout_height="20dp"
        android:layout_weight="1"
        android:id = "@+id/submitBttn"
        android:text="@string/submitBttn"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="6"/>
</LinearLayout>
