<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.easyfin.travis.easyfin.add_bill_activity">
    <EditText
        android:id="@+id/bill_add_name"
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_alignParentTop="true"
        android:hint="@string/bill_add_name_text"
        android:textColorHint="@color/white"
        android:textColor="@color/white"/>
    <EditText
        android:id="@+id/bill_add_date"
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_below="@id/bill_add_name"
        android:hint="@string/bill_add_date_text"
        android:textColorHint="@color/white"
        android:inputType="date"
        android:textColor="@color/white"/>
    <EditText
        android:id="@+id/bill_add_amount"
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_below="@id/bill_add_date"
        android:hint="@string/bill_add_amount_text"
        android:textColorHint="@color/white"
        android:inputType="numberDecimal"
        android:textColor="@color/white"/>

    <Button
        android:id="@+id/bill_back_button"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@id/bill_add_amount"
        android:layout_marginTop="20dp"
        android:textColor="@color/colorWindowBackground"
        android:textSize="20dp"
        android:text="@string/backBttn"/>
    <Button
        android:id="@+id/bill_submit_button"
        android:textColor="@color/colorWindowBackground"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:text="@string/submitBttn"
        android:layout_below="@id/bill_back_button"
        android:layout_marginTop="20dp"
        android:textSize="20dp"
        />
</RelativeLayout>
