<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/billsActivity"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.easyfin.travis.easyfin.BillsActivity">
    <TextView
        android:id="@+id/bills_label"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:gravity="center_vertical"
        android:text="@string/bills_label_text"
        android:textSize="40dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />
    <TextView
        android:id="@+id/bills_name_label"
        android:layout_below="@id/bills_label"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_alignStart="@+id/bills_scroll_view"
        android:text="@string/bills_name_label_text"
        android:textSize="20dp"/>
    <TextView
        android:id="@+id/bills_date_label"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:text="@string/bills_date_label_text"
        android:textSize="20dp"
        android:layout_alignBaseline="@+id/bills_amount_label"
        android:layout_alignBottom="@+id/bills_amount_label"
        android:layout_centerHorizontal="true" />
    <TextView
        android:id="@+id/bills_amount_label"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_alignEnd="@+id/bills_scroll_view"
        android:text="@string/bills_label_amount_text"
        android:textSize="20dp"
        android:layout_below="@+id/bills_label"/>

    <ScrollView
        android:id="@+id/bills_scroll_view"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        android:layout_below="@+id/bills_name_label"
        android:layout_alignParentEnd="true"
        android:isScrollContainer="true">

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id = "@+id/tableLayoutBills"
            android:stretchColumns="*">
        </TableLayout>
    </ScrollView>
    <EditText
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:id = "@+id/bills_search_field"
        android:inputType="text"
        android:hint="bill name or date"
        android:layout_below="@id/bills_scroll_view"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="25dp"
        android:layout_marginBottom="10dp"
        android:layout_toStartOf="@+id/bills_search_button"
        android:textColor="@color/white"
        android:textColorHint="@color/white"/>
    <Button
        android:layout_width="50dp"
        android:layout_height="40dp"
        android:id="@+id/bills_search_button"
        android:layout_alignParentRight="true"
        android:text="@string/search_button"
        android:layout_marginRight="25dp"
        android:layout_below="@id/bills_scroll_view"
        android:layout_marginBottom="10dp"
        android:layout_alignStart="@+id/bills_amount_label"
        android:textColor="@color/colorWindowBackground"/>
    <Button
        android:id="@+id/bills_refresh_button"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:layout_below="@id/bills_search_field"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="25dp"
        android:text="@string/refresh_bills_button"
        android:textSize="20dp"
        android:textColor="@color/colorWindowBackground"/>
    <Button
        android:id="@+id/bills_delete_button"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:layout_below="@id/bills_search_field"
        android:layout_alignParentRight="true"
        android:layout_marginRight="25dp"
        android:text="@string/delete_bill_button"
        android:textSize="20dp"
        android:textColor="@color/colorWindowBackground"/>

</RelativeLayout>
